bk_ida/gccida/c1/ereal_from_uint
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ereal_from_uint/src/real.c:1393:82: error: must use 'enum' tag to refer to type 'machine_mode'
void  ereal_from_uint( realvaluetype *d, unsigned __int64 i, unsigned __int64 j, machine_mode mode) 
                                                                                 ^
                                                                                 enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ereal_from_uint/src/real.c:1403:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_FLOAT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ereal_from_uint/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ereal_from_uint/src/obj/real.o] Error 1
